Refactor command test classes for test responsibility plan
- Removed or moved all test methods in command test classes that were out of scope per docs/test-refactoring-plan.md
- Only unit-scope tests remain in command test classes as per the new test responsibility matrix
- Added defensive logic to AcknowledgementTestUtils.createMixedScenarioOpportunities()

Refactored AcknowledgementTestUtils.cls to remove complex scenario builder methods
- Retained only basic data creation helpers (createTestContact, createTestContactWithoutEmail, createTestOpportunity, etc.) and simple assertion utilities.
- Updated all affected test classes

Refactor EmailPreparationCommand and tests for instance-based dependency injection

- Updated EmailPreparationCommand to use a mutable instance variable for dependency injection
- Refactored all test methods in EmailPreparationCommandTest to use instance-based dependency injection via the setter, replacing all static references.
- Updated all tests to create EmailPreparationCommand instances and inject mocks as needed, ensuring compatibility with the new pattern.

--- a/force-app/main/default/classes/commands/EmailPreparationCommand.cls
+++ b/force-app/main/default/classes/commands/EmailPreparationCommand.cls
@@ -7,8 +7,8 @@ public with sharing class EmailPreparationCommand implements IAcknowledgementCom
   private DonationAcknowledgementService.EmailConfig config;
   private AcknowledgementCommandOutputs.EmailPrepOutput prepOutput;
 
-  @TestVisible
-  private static IOrgWideEmailService orgWideEmailService = new OrgWideEmailService();
+  @testVisible
+  public IOrgWideEmailService orgWideEmailService;
 
   public EmailPreparationCommand(
     List<Opportunity> validOpportunities,
@@ -17,6 +17,7 @@ public with sharing class EmailPreparationCommand implements IAcknowledgementCom
     this.validOpportunities = validOpportunities;
     this.config = config;
     this.prepOutput = new AcknowledgementCommandOutputs.EmailPrepOutput();
+    this.orgWideEmailService = new OrgWideEmailService();
   }
 
   /**
@@ -76,7 +77,7 @@ public with sharing class EmailPreparationCommand implements IAcknowledgementCom
    * See: https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_orgwideemailaddress.htm
    */
   @TestVisible
-  private static Id getDefaultOrgWideEmailAddressId() {
+  private Id getDefaultOrgWideEmailAddressId() {
     OrgWideEmailAddress defaultNoReply = orgWideEmailService.getDefaultNoReplyAddress();
     if (defaultNoReply == null) {
       System.debug(
