--- a/force-app/main/default/classes/tests/mocks/MockOrgWideEmailService.cls
+++ b/force-app/main/default/classes/tests/mocks/MockOrgWideEmailService.cls
@@ -1,23 +1,49 @@
 /**
  * Mock implementation of IOrgWideEmailService for testing
  */
-@isTest
-public class MockOrgWideEmailService implements System.StubProvider {
+public class MockOrgWideEmailService implements IOrgWideEmailService {
   private OrgWideEmailAddress mockAddress;
+  private Integer callCount = 0;
+
   public MockOrgWideEmailService(OrgWideEmailAddress address) {
     this.mockAddress = address;
   }
-  public Object handleMethodCall(
-    Object stubbedObject,
-    String stubbedMethodName,
-    Type returnType,
-    List<Type> listOfParamTypes,
-    List<String> listOfParamNames,
-    List<Object> listOfArgs
+
+  // Configuration methods
+  public MockOrgWideEmailService setDefaultAddress(
+    OrgWideEmailAddress address
   ) {
-    if (stubbedMethodName == 'getDefaultNoReplyAddress') {
-      return mockAddress;
-    }
-    return null;
+    this.mockAddress = address;
+    return this;
+  }
+  public MockOrgWideEmailService setNoDefault() {
+    this.mockAddress = null;
+    return this;
+  }
+  public MockOrgWideEmailService reset() {
+    this.mockAddress = null;
+    this.callCount = 0;
+    return this;
+  }
+
+  // Interface implementation
+  public OrgWideEmailAddress getDefaultNoReplyAddress() {
+    callCount++;
+    return mockAddress;
+  }
+
+  // Verification methods
+  public void verifyGetDefaultCalled(Integer expectedCount) {
+    System.assertEquals(
+      expectedCount,
+      callCount,
+      'Expected getDefaultNoReplyAddress to be called ' +
+        expectedCount +
+        ' times, but was called ' +
+        callCount
+    );
+  }
+  public Integer getCallCount() {
+    return callCount;
   }
 }
