--- a/force-app/main/default/classes/tests/commands/OpportunityValidationCommandTest.cls
+++ b/force-app/main/default/classes/tests/commands/OpportunityValidationCommandTest.cls
@@ -18,6 +18,11 @@ private class OpportunityValidationCommandTest {
     );
   }
 
+  /**
+   * NOTE: This test class was refactored as part of the test responsibility plan.
+   * See docs/test-refactoring-plan.md for details on which methods were moved or removed.
+   */
+
   @isTest
   static void testValidateOpportunitiesWithValidOpportunity() {
     // Test validation with a valid opportunity
@@ -213,73 +218,6 @@ private class OpportunityValidationCommandTest {
   }
 
   @isTest
-  static void testValidateOpportunitiesMixedScenarios() {
-    // Test validation with mixed scenarios
-    Map<String, Opportunity> testOpps = AcknowledgementTestUtils.createMixedScenarioOpportunities();
-
-    List<Opportunity> opps = AcknowledgementTestUtils.queryOpportunitiesFullFields(
-      new List<Id>{
-        testOpps.get('success').Id,
-        testOpps.get('acknowledged').Id,
-        testOpps.get('noContact').Id,
-        testOpps.get('noEmail').Id
-      }
-    );
-
-    DonationAcknowledgementService.DetailedAckResult result = new DonationAcknowledgementService.DetailedAckResult();
-
-    Test.startTest();
-    OpportunityValidationCommand validationCmd = new OpportunityValidationCommand(
-      opps,
-      result
-    );
-    validationCmd.execute();
-    List<Opportunity> validOpps = validationCmd.getValidOpportunities();
-    Test.stopTest();
-
-    // Verify only 1 valid opportunity (success)
-    System.assertEquals(1, validOpps.size(), 'Should have 1 valid opportunity');
-    System.assertEquals(
-      testOpps.get('success').Id,
-      validOpps[0].Id,
-      'Should be the success opportunity'
-    );
-
-    // Verify 3 skipped opportunities added to result
-    System.assertEquals(
-      3,
-      result.opportunityResults.size(),
-      'Should have 3 skipped results'
-    );
-
-    // Verify specific skipped statuses
-    Map<String, DonationAcknowledgementService.OpportunityResult> resultsByName = AcknowledgementTestUtils.createResultsByNameMap(
-      result.opportunityResults
-    );
-
-    AcknowledgementTestUtils.assertOpportunityResult(
-      resultsByName,
-      'Already Acknowledged Opp',
-      DonationAcknowledgementService.AckStatus.ALREADY_ACKNOWLEDGED,
-      'already acknowledged'
-    );
-
-    AcknowledgementTestUtils.assertOpportunityResult(
-      resultsByName,
-      'No Contact Opp',
-      DonationAcknowledgementService.AckStatus.NO_CONTACT,
-      'no associated Contact'
-    );
-
-    AcknowledgementTestUtils.assertOpportunityResult(
-      resultsByName,
-      'No Email Opp',
-      DonationAcknowledgementService.AckStatus.NO_EMAIL,
-      'no email address'
-    );
-  }
-
-  @isTest
   static void testValidateOpportunitiesEmptyList() {
     // Test validation with empty opportunity list
     List<Opportunity> emptyOpps = new List<Opportunity>();
@@ -307,63 +245,7 @@ private class OpportunityValidationCommandTest {
     );
   }
 
-  @isTest
-  static void testValidateOpportunitiesBulkProcessing() {
-    // Test validation with multiple opportunities to verify bulk processing
-    Contact c = [SELECT Id FROM Contact LIMIT 1];
-
-    List<Id> oppIds = new List<Id>();
-    for (Integer i = 0; i < 5; i++) {
-      Opportunity bulkOpp = AcknowledgementTestUtils.createTestOpportunity(
-        'Bulk Valid Opp ' + i,
-        c,
-        null,
-        100 + (i * 50)
-      );
-      oppIds.add(bulkOpp.Id);
-    }
-
-    List<Opportunity> opps = AcknowledgementTestUtils.queryOpportunitiesFullFields(
-      oppIds
-    );
-    DonationAcknowledgementService.DetailedAckResult result = new DonationAcknowledgementService.DetailedAckResult();
-
-    Test.startTest();
-    OpportunityValidationCommand validationCmd = new OpportunityValidationCommand(
-      opps,
-      result
-    );
-    validationCmd.execute();
-    List<Opportunity> validOpps = validationCmd.getValidOpportunities();
-    Test.stopTest();
-
-    // Verify all opportunities are valid
-    System.assertEquals(
-      5,
-      validOpps.size(),
-      'Should have 5 valid opportunities'
-    );
-    System.assertEquals(
-      0,
-      result.opportunityResults.size(),
-      'Should have no skipped results'
-    );
-
-    // Verify all opportunity IDs are present
-    Set<Id> validOppIds = new Set<Id>();
-    for (Opportunity validOpp : validOpps) {
-      validOppIds.add(validOpp.Id);
-    }
-    System.assertEquals(
-      oppIds.size(),
-      validOppIds.size(),
-      'Should have all original opportunity IDs'
-    );
-    for (Id oppId : oppIds) {
-      System.assert(
-        validOppIds.contains(oppId),
-        'Should contain opportunity ID: ' + oppId
-      );
-    }
-  }
+  // The following test methods were moved to DonationAcknowledgementServiceImplTest as part of the test refactoring plan:
+  // - testValidateOpportunitiesMixedScenarios
+  // - testValidateOpportunitiesBulkProcessing
 }
